# arc-agi

./: README.md  pyproject.toml
datasets/: README.md  generate.py
datasets/arc-agi-1/: README.md
datasets/arc-agi-1-single-test/evaluation/: 05a7bcf2.json  0934a4d8.json  0c9aba6e.json  195ba7dc.json  20818e16.json  281123b4.json  310f3251.json  34b99a2b.json  3d31c5b3.json  47996f11.json  506d28a5.json  59341089.json  5b6cbef5.json  66f2d22f.json  6a11f6da.json  7039b2d7.json  7953d61e.json  79fb03f4.json  903d1b4a.json  929ab4e9.json  981571dc.json  9def23fe.json  ac0c5833.json  af22c60d.json  bc4146bd.json  c35c1b4c.json  d19f7514.json  de493100.json  e133d23d.json  e66aafb8.json  e6de6e8f.json  e99362f0.json  ea9794b1.json  ed98d772.json  f4081712.json  f9d67f8b.json
datasets/arc-agi-1-single-test/training/: 007bbfb7.json  1b2d62fb.json  29ec7d0e.json  3631a71a.json  3c9b0459.json  4c4377d9.json  6430c8c4.json  67e8384a.json  6d0aefbc.json  6fa7a44f.json  74dd1130.json  75b8110e.json  94f9d214.json  99b1bc43.json  a68b268e.json  b230c067.json  b8825c91.json  ce4f8723.json  cf98881b.json  ed36ccf7.json  f2829549.json  fafffa47.json
datasets/arc-agi-2/: README.md
datasets/arc-agi-2-single-test/: task.schema.json
datasets/arc-agi-2-single-test/evaluation/: 271d71e2.json  abc82100.json  dfadab01.json  f560132c.json  faa9f03d.json
datasets/scripts/: generate_arc_agi_1.py  generate_arc_agi_1_single_test.py  generate_arc_agi_2.py  generate_arc_agi_2_single_test.py
examples/arc-agi-demo/: demo.ipynb  dsl-demo.ipynb  pyproject.toml
(+4 files in other folders)
