[project]
name = "arc-agi-research-toolkit"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "arc-agi[all]",
    "ipykernel>=6.29.5",
]

[tool.uv.workspace]
members = ["packages/*", "examples/*"]

[tool.uv.sources]
arc-agi = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]
